--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br />
         <span>Age:</span> <span id="calculated-age">...</span>
         <br />
-        <span>Interest:</span> Programming, Data science
+        <span>Interests:</span> Programming, Data science
       </p>
     </div>
     <div id="social-media">
